[tool.poetry]
name = "rotating-blade-acoustics"
version = "0.1.0"
description = ""
authors = ["Widmark-Kaue <widmarkkaue.s.c@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
pathlib2 = "^2.3.7.post1"
jax = "^0.4.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
